--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="caixa">
       <h2>Meus Projetos:</h2>
-      <p href="https://github.com/JVSARAVALLI/PROJETO_2025-1-infotech" target="_blank">Site em PHP</p>
+      <a href="https://github.com/JVSARAVALLI/PROJETO_2025-1-infotech" target="_blank">Site em PHP</a>
     </div>
   </main>
 
@@ -86,7 +86,7 @@
       &copy; 2025 - Meu projeto de Férias |
       <a href="https://github.com/JVSARAVALLI" target="_blank">GitHub</a> |
       <a href="https://www.linkedin.com/in/jo%C3%A3o-vitor-saravalli-33356734a/" target="_blank">LinkedIn</a>
-      <a href="@jv.saravalli@gmail.com" target="_blank">Email</a>
+
     </p>
   </footer>
 
