--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <!-- Menu de navegação -->
   <nav>
-    <a href="#">Sobre</a>
+    <a href="sobre.html">Sobre</a>
     <a href="#">Contato</a>
   </nav>
 
