--- a/sobre.html
+++ b/sobre.html
@@ -49,12 +49,16 @@
   </style>
 </head>
     
+  main>
+    <div class="caixa"></div>
     <header>
       <h>SOBRE EU</h1>
         <p>Meu nome é João Vitor</p>
         <p>A área que pretendo ir é para Banco de Dados dentro da T.I</p>
         <p>Estou cursando a faculdade pela UNINOVE, no curso de ADS(Anlálise de Desenvolvimento de Sistemas</p>
     </header>
+    </div>
+</main>
 
 
 <body>
