--- a/index.html
+++ b/index.html
@@ -1,95 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
-  <style>
-   /* CSS interno para dar estilo */
-    body {
-      font-family: Arial, Helvetica, sans-serif; /*parte do fundo do site*/
-      background-color: #FF0000;
-      margin: 0;
-      padding: 0;
-    }
-    header, footer {
-      background-color: #333; /*parte do banneer/rodaé do site*/
-      color: white;/* cor do texto*/
-      padding: 5px;/* espaçamento interno*/
-      text-align: center;/* alinhamento do texto*/
-    }
-    nav {
-      background-color: #444;/* */
-      padding: 10px;
-      text-align: center; /*centraliza os links do rodapé*/
-    }
-    nav a { /* estilo paras os links do rodapé */
-      color: white;
-      margin: 0 10px;
-      text-decoration: none;
-    }
-    main { /* */
-      padding: 20px;
-    }
-    .caixa {
-  background-color: white; /* Fundo branco da caixa */
-  padding: 20px;/* Espaço interno */
-  margin-bottom: 20px;/* Espaço abaixo de cada caixa */
-  border-radius: 8px;/* Cantos arredondados */
-  box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Sombra suave ao redor */
-}
-    table {
-  width: 100%;                 /* A tabela ocupa toda a largura do container */
-  border-collapse: collapse;  /* Remove os espaçamentos entre bordas das células */
-    }
-    table, th, td {
-  border: 1px solid #ccc;     /* Borda cinza clara em todas as células e tabela */
-    }
-    th, td {
-  padding: 8px;               /* Espaço interno dentro das células */
-  text-align: left;           /* Alinhamento do texto à esquerda */
-    }
-  </style>
+  
 </head>
 
 <body>
-
-  <!-- Cabeçalho -->
   <header>
-    <h1>PORTIFÓLIO</h1>
-    <p>MEU PORTIFÓLIO</p>
+    <div class="titulo-principal">
+      <h1>BEM VINDO AO MEU PORTIFÓLIO</h1>
+      <h4>JOÃO VITOR DO NASCIMENTO SARAVALLI</h4>
+      </div>
   </header>
 
-  <!-- Menu de navegação -->
+  <div class="caixa-navegação">
   <nav>
     <a href="sobre.html">Sobre</a>
-    <a href="#">Contato</a>
+    <a href="contato.html">Contato</a>
   </nav>
-
-  <!-- Conteúdo principal -->
+    
   <main>
-    <div class="caixa">
-      <h2>Tenhos expereincias em:</h2>
+    <div class="caixa-experiencias">
+      <h3>Tenhos expereincias em:</h3>
       <p>PHP(1 semestre)</p>
       <p>SQL(1 semestre)</p>
       <p>HTML5(1 semestre)</p>
       <p>C#(1 semestre)</p>
     </div>
 
-    <div class="caixa">
+    <div class="caixa-projetos">
       <h2>Meus Projetos:</h2>
-      <a href="https://github.com/JVSARAVALLI/PROJETO_2025-1-infotech" target="_blank">Site em PHP</a>
-    </div>
+      <a href="https://github.com/JVSARAVALLI/meu-site-teste" target="_blank">Site em PHP/HTML/CSS</a>
   </main>
 
-  <!-- Rodapé -->
   <footer>
     <p>
       &copy; 2025 - Meu projeto de Férias |
       <a href="https://github.com/JVSARAVALLI" target="_blank">GitHub</a> |
       <a href="https://www.linkedin.com/in/jo%C3%A3o-vitor-saravalli-33356734a/" target="_blank">LinkedIn</a>
-
     </p>
   </footer>
-
-
+    
+      </div>
+    </div>
+  </div>
+</div>
+  
 </body>
 </html>
